# Pika-Chat

./: .env  .gitignore  Cargo.toml  README.md  Trunk.toml  chat_app.db  deployment.md  index.html  project_proposal.md  readme.md  test.md
docs/: final_report.md
old_a/: .env
old_a/src/config/: state.rs
old_a/src/models/: room.rs
old_a/src/routes/: test_routes.rs
old_b/: .gitignore
old_b/src/components/: header.rs  message.rs  panel.rs
old_b/styles/: base.css
pika-chat-frontend/: Cargo.toml  README.md
pika-chat-frontend/src/: app.rs  main.rs
pika-chat-frontend/src/components/: footer.rs  panel.rs  room_member_list.rs
pika-chat-frontend/src/pages/: chatroom.rs  dashboard.rs  home.rs  register.rs
pika-chat-frontend/src/services/: message.rs  mod.rs  room.rs  utils.rs  websocket.rs
pika-chat-frontend/styles/: dashboard.css  home.css
pika-chatroom-server/: .gitignore  Cargo.toml  Dockerfile  fly.toml  readme.md
pika-chatroom-server/migrations/: 0001_create_users.sql  0002_create_rooms_and_user_rooms.sql  0003_add_avatar_url.sql
src/: main.rs  routes.rs
src/components/: form_input.rs  header.rs  mod.rs  room_card.rs
src/middleware/: auth_middleware.rs
src/models/: mod.rs  presence.rs  response.rs  room.rs  user.rs  user_room.rs
src/pages/: chatroom.rs  dashboard.rs  home.rs  login.rs  mod.rs  register.rs
src/routes/: auth.rs  mod.rs  room.rs
src/services/: auth.rs  message.rs  mod.rs  room.rs  utils.rs  websocket.rs
src/websockets/: chat_session.rs
styles/: base.css  dashboard.css  login.css  output.css  register.css  style.css
(+6 files in other folders)
