[package]
name = "pika-chat-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo-net = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
log = "0.4" # Add the logging library
wasm-logger = "0.2" # Add WASM-compatible logging
yew-router = "0.17"
gloo = "0.7"
serde_json = "1.0"
base64 = "0.21"
js-sys = "0.3.76"
futures = "0.3"
